--- a/examples/entities.yaml
+++ b/examples/entities.yaml
@@ -1,41 +1,25 @@
 ---
-# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-system
-apiVersion: backstage.io/v1alpha1
-kind: System
-metadata:
-  name: examples
-spec:
-  owner: guests
----
-# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-component
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: example-website
+  name: nginx
+  description: Example nginx app
+  annotations:
+    'backstage.io/kubernetes-label-selector': 'app=nginx'
 spec:
-  type: website
+  type: service
   lifecycle: experimental
   owner: guests
-  system: examples
-  providesApis: [example-grpc-api]
 ---
-# https://backstage.io/docs/features/software-catalog/descriptor-format#kind-api
 apiVersion: backstage.io/v1alpha1
-kind: API
+kind: Component
 metadata:
-  name: example-grpc-api
+  name: busybox
+  description: Example busybox app
+  annotations:
+    'backstage.io/kubernetes-label-selector': 'app=busybox'
+    'backstage.io/kubernetes-namespace': develop
 spec:
-  type: grpc
+  type: service
   lifecycle: experimental
   owner: guests
-  system: examples
-  definition: |
-    syntax = "proto3";
-
-    service Exampler {
-      rpc Example (ExampleMessage) returns (ExampleMessage) {};
-    }
-
-    message ExampleMessage {
-      string example = 1;
-    };
