--- a/app-config.yaml
+++ b/app-config.yaml
@@ -74,7 +74,7 @@ kubernetes:
     - type: 'config'
       clusters:
         - name: oidc-cluster
-          url: ${KUBERNETES_API_URL}
+          url: ${AUTH0_KUBERNETES_URL}
           authProvider: oidc
           oidcTokenProvider: onelogin
           skipTLSVerify: true
